Make unit tests run & pass